[gd_scene load_steps=6 format=3 uid="uid://bptlhwv2xyyqr"]

[ext_resource type="Script" path="res://addons/orchestrator/views/about_view.gd" id="1_xky0g"]
[ext_resource type="Texture2D" uid="uid://bqime3p2y5r76" path="res://addons/orchestrator/assets/icons/OrchestratorLogo.svg" id="2_08bvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c516b"]
bg_color = Color(0.113725, 0.133333, 0.160784, 1)

[sub_resource type="SystemFont" id="SystemFont_1rny5"]
font_weight = 999
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3s5y"]
bg_color = Color(0.145098, 0.168627, 0.203922, 1)

[node name="AboutView" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c516b")
script = ExtResource("1_xky0g")

[node name="AboutLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2

[node name="Banner" type="MarginContainer" parent="AboutLayout"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="AboutLayout/Banner"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="LogoContainer" type="MarginContainer" parent="AboutLayout/Banner/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100

[node name="HBoxContainer" type="HBoxContainer" parent="AboutLayout/Banner/HBoxContainer/LogoContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Logo" type="TextureRect" parent="AboutLayout/Banner/HBoxContainer/LogoContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
texture = ExtResource("2_08bvf")
expand_mode = 1
stretch_mode = 5

[node name="CopyrightContainer" type="VBoxContainer" parent="AboutLayout/Banner/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -5
alignment = 1

[node name="Version" type="Label" parent="AboutLayout/Banner/HBoxContainer/CopyrightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Godot Orchestrator v1.0.5"

[node name="Copyright" type="Label" parent="AboutLayout/Banner/HBoxContainer/CopyrightContainer"]
layout_mode = 2
text = "(c) 2023 Vahera Studios, LLC and its contributors"

[node name="Tabs" type="MarginContainer" parent="AboutLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TabContainer" type="TabContainer" parent="AboutLayout/Tabs"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Authors" type="TabBar" parent="AboutLayout/Tabs/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="AboutLayout/Tabs/TabContainer/Authors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ProjectFounders" type="Label" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_1rny5")
text = "Project Founders"

[node name="PanelContainer" type="PanelContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3s5y")

[node name="Founders" type="VBoxContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Founder1" type="Label" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer/Founders"]
layout_mode = 2
text = "Darryl Agee (Zomphie)"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer/Founders"]
layout_mode = 2

[node name="Founder2" type="Label" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer/Founders"]
layout_mode = 2
text = "Chris Cranford (Naros)"
vertical_alignment = 1

[node name="LeadDeveloper" type="Label" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_1rny5")
text = "Lead Developer"

[node name="PanelContainer2" type="PanelContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3s5y")

[node name="LeadDevelopers" type="VBoxContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LeadDeveloper1" type="Label" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer2/LeadDevelopers"]
layout_mode = 2
text = "Chris Cranford (Naros)"
vertical_alignment = 1

[node name="Developers" type="Label" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_1rny5")
text = "Developers
"

[node name="PanelContainer3" type="PanelContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3s5y")

[node name="Developers" type="VBoxContainer" parent="AboutLayout/Tabs/TabContainer/Authors/ScrollContainer/MarginContainer/VBoxContainer/PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="License" type="TabBar" parent="AboutLayout/Tabs/TabContainer"]
visible = false
layout_mode = 2

[node name="License" type="TextEdit" parent="AboutLayout/Tabs/TabContainer/License"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Copyright (c) 2023 by Vahera Studios, LLC and its contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"
wrap_mode = 1

[node name="ButtonContainer" type="MarginContainer" parent="AboutLayout"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="OkButton" type="Button" parent="AboutLayout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "OK"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="AboutLayout/ButtonContainer/OkButton" to="." method="_on_ok_button_pressed"]
